Pass in git info for materials section in provenance

--- a/provenance/distroless-provenance-task.yaml
+++ b/provenance/distroless-provenance-task.yaml
@@ -12,6 +12,10 @@ spec:
   params:
     - name: MANIFEST_SUBSECTION
       type: string
+    - name: CHAINS-GIT_COMMIT
+      type: string
+    - name: CHAINS-GIT_URL
+      type: string
   workspaces:
   - name: source
     mountPath: /go/src/github.com/GoogleContainerTools/distroless
