--- a/.github/workflows/update-deb-package-snapshots.yml
+++ b/.github/workflows/update-deb-package-snapshots.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@7380612b49221684fefa025244f2ef4008ae50ad
       with:
-        github_token: ${{ secrets.ACTIONS_TOKEN }}
+        token: ${{ secrets.ACTIONS_TOKEN }}
         commit-message: "Bumping packages to latest stable versions"
         title: "Bumping packages to latest stable versions"
         body: "Bumping packages to latest stable versions"
