--- a/java/testdata/java11_debian11.yaml
+++ b/java/testdata/java11_debian11.yaml
@@ -1,27 +1,27 @@
 schemaVersion: "2.0.0"
 commandTests:
-  - name: jetty
-    command: "/usr/bin/java"
-    args: ["-jar", "/jetty/start.jar", "--version"]
-    expectedOutput: ['.*Jetty Server Classpath:.*']
   - name: java
-    command: "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java"
+    command: "/usr/lib/jvm/java-11-openjdk-amd64/bin/java"
     args: ["-version"]
-    expectedError: ['openjdk version "1\.8.*"']
+    expectedError: ['openjdk version "11\.0\.12"']
   - name: java-symlink
     command: "/usr/bin/java"
     args: ["-version"]
-    expectedError: ['openjdk version "1\.8.*"']
+    expectedError: ['openjdk version "11\.0\.12"']
 fileExistenceTests:
   - name: certs
     path: "/etc/ssl/certs/java/cacerts"
     shouldExist: true
-  - name: busybox
+  - name: no-busybox
     path: "/busybox/sh"
     shouldExist: false
   - name: no-shell
     path: "/bin/sh"
     shouldExist: false
   - name: no-javac
-    path: "/usr/lib/jvm/java-8-openjdk-amd64/bin/javac"
+    path: "/usr/lib/jvm/java-11-openjdk-amd64/bin/javac"
     shouldExist: false
+metadataTest:
+  env:
+    - key: 'JAVA_VERSION'
+      value: '11.0.12'
