Update debian11 builds housekeeping
- remove special casing for DISTROS
- publish python3.9-deb11
- some pythong2.7 cleanup
- sign java images

Signed-off-by: Appu Goundan <appu@google.com>

--- a/base/BUILD
+++ b/base/BUILD
@@ -100,5 +100,4 @@ pkg_tar(
     package_dir = "etc",
 )
 
-# TODO once all builds use _debian11, remove this
-[distro_components(suffix) for suffix in (DISTRO_SUFFIXES + ["_debian11"])]
+[distro_components(suffix) for suffix in DISTRO_SUFFIXES]
