--- a/examples/java/Dockerfile
+++ b/examples/java/Dockerfile
@@ -1,10 +1,10 @@
-FROM openjdk:11-jdk-slim AS build-env
+FROM openjdk:11-jdk-slim-bullseye AS build-env
 COPY . /app/examples
 WORKDIR /app
 RUN javac examples/*.java
 RUN jar cfe main.jar examples.HelloJava examples/*.class 
 
-FROM gcr.io/distroless/java:11
+FROM gcr.io/distroless/java-debian11:11
 COPY --from=build-env /app /app
 WORKDIR /app
 CMD ["main.jar"]
