--- a/examples/python3-requirements/Dockerfile
+++ b/examples/python3-requirements/Dockerfile
@@ -1,7 +1,7 @@
 # Build a virtualenv using the appropriate Debian release
 # * Install python3-venv for the built-in Python3 venv module (not installed by default)
 # * Install gcc libpython3-dev to compile C Python modules
-# * Inthe virtualnev: Update pip setuputils and wheel to support building new packages
+# * In the virtualenv: Update pip setuputils and wheel to support building new packages
 FROM debian:11-slim AS build
 RUN apt-get update && \
     apt-get install --no-install-suggests --no-install-recommends --yes python3-venv gcc libpython3-dev && \
