Update Bazel 3.4.1 -> 4.2.1 (LTS release)
This updates Bazel to the most recent long term support Bazel
release. This appears to work for me locally. However, I am unable
to test the Github Actions or Cloud Build changes, since I don't have
permission. This doesn't seem to require any changes to this
repository. It seems useful to make sure we are building with an LTS
version of Bazel?

The big change that is necessary is finding a public container image
that contains this version of Bazel. The marketplace images are no
longer being updated. The Google Cloud Build images are, but don't
have Bazel version tags. I manually executed the following docker
commands to get the latest version, and confirm this is using Bazel
4.2.1:

    docker pull gcr.io/cloud-builders/bazel
    docker run --rm -ti gcr.io/cloud-builders/bazel version
    docker image inspect gcr.io/cloud-builders/bazel --format '{{.Id}}'

See: https://github.com/GoogleCloudPlatform/cloud-builders/issues/667

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,17 @@ options:
 
 steps:
 
-- name: gcr.io/cloud-marketplace-containers/google/bazel:3.4.1
+# Unfortunately gcr.io/cloud-marketplace-containers/google/bazel is
+# no longer maintained. The cloud-build project is, but does not tag
+# images with bazel versions. The SHA hash was found manually and
+# verified with:
+#
+#   docker pull gcr.io/cloud-builders/bazel
+#   docker run --rm -ti gcr.io/cloud-builders/bazel version
+#   docker image inspect gcr.io/cloud-builders/bazel --format '{{.Id}}'
+#
+# See: https://github.com/GoogleCloudPlatform/cloud-builders/issues/667
+- name: gcr.io/cloud-builders/bazel@sha256:4a785d36e568d3e75eb20be84b80f6e658e21b92bae12d23d1c1da60f5833bf4
   env:
   - PROJECT_ID=${PROJECT_ID}
   - COMMIT_SHA=${COMMIT_SHA}
