--- a/provenance/build-distroless-task.yaml
+++ b/provenance/build-distroless-task.yaml
@@ -44,6 +44,9 @@ spec:
         #!/bin/sh
         set -ex
 
+        # package manager needs wget
+        apt-get install wget
+
         # Make sure python points to python3
         update-alternatives --install /usr/bin/python python /usr/bin/python3 0
 
