--- a/examples/go/Dockerfile
+++ b/examples/go/Dockerfile
@@ -1,12 +1,22 @@
-FROM golang:1.12 as build-env
+FROM golang:latest as build-env
+
+LABEL NAME distroless-go-example
+LABEL VERSION 0.0.1
 
 WORKDIR /go/src/app
-COPY . /go/src/app
+COPY main.go .
 
+RUN go mod init
 RUN go get -d -v ./...
 
-RUN go build -o /go/bin/app
+# Detaails on when to utilize cgo: 
+#   https://pkg.go.dev/cmd/cgo  
+RUN CGO_ENABLED=0 go build -o /go/bin/app
 
-FROM gcr.io/distroless/base
+# Details on when to use Distroless Base vs Static:
+#   https://github.com/GoogleContainerTools/distroless/blob/main/base/README.md
+#FROM gcr.io/distroless/base
+FROM gcr.io/distroless/static
+
 COPY --from=build-env /go/bin/app /
 CMD ["/app"]
