--- a/java/testdata/java17_debug_debian11.yaml
+++ b/java/testdata/java17_debug_debian11.yaml
@@ -3,15 +3,15 @@ commandTests:
   - name: java
     command: "/usr/lib/jvm/java-17-openjdk-amd64/bin/java"
     args: ["-version"]
-    expectedError: ['openjdk version "17-ea"']
+    expectedError: ['openjdk version "17.0.1" 2021-10-19']
   - name: java-symlink
     command: "/usr/bin/java"
     args: ["-version"]
-    expectedError: ['openjdk version "17-ea"']
+    expectedError: ['openjdk version "17.0.1" 2021-10-19']
   - name: javac
     command: "/usr/lib/jvm/java-17-openjdk-amd64/bin/javac"
     args: ["-version"]
-    expectedOutput: ['javac 17-ea']
+    expectedOutput: ['javac 17.0.1']
 fileExistenceTests:
   - name: certs
     path: "/etc/ssl/certs/java/cacerts"
@@ -25,4 +25,4 @@ fileExistenceTests:
 metadataTest:
   env:
     - key: 'JAVA_VERSION'
-      value: '17'
+      value: '17.0.1+12-1+deb11u2'
