Fix cosign build
create a world writeable tmp dir in workspace so cosign (nonroot)
container has a place to work

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -63,6 +63,13 @@ steps:
 - name: ubuntu
   entrypoint: ./cloudbuild_jq.sh
 
+# create a world writeable tmp dir in workspace for nonroot containers to write into
+- name: ubuntu
+  entrypoint: mkdir
+  args:
+  - -m777
+  - /workspace/tmp
+
 - name: gcr.io/projectsigstore/cosign:v1.3.1@sha256:3cd9b3a866579dc2e0cf2fdea547f4c9a27139276cc373165c26842bc594b8bd
   env:
   - PROJECT_ID=${PROJECT_ID}
