--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -63,18 +63,14 @@ steps:
 - name: ubuntu
   entrypoint: ./cloudbuild_jq.sh
 
-# create a world writeable tmp dir in workspace for nonroot containers to write into
-- name: ubuntu
-  entrypoint: mkdir
-  args:
-  - -m777
-  - /workspace/tmp
-
 - name: gcr.io/projectsigstore/cosign:v1.3.1@sha256:3cd9b3a866579dc2e0cf2fdea547f4c9a27139276cc373165c26842bc594b8bd
   env:
   - PROJECT_ID=${PROJECT_ID}
   - COMMIT_SHA=${COMMIT_SHA}
   - REGISTRY=gcr.io
+  # Workaround for: https://github.com/GoogleContainerTools/distroless/issues/914
+  # /tmp has permissions 777
+  - TUF_ROOT=/tmp
   entrypoint: sh
   args:
   - -c
@@ -85,6 +81,9 @@ steps:
   - PROJECT_ID=${PROJECT_ID}
   - COMMIT_SHA=${COMMIT_SHA}
   - REGISTRY=gcr.io
+  # Workaround for: https://github.com/GoogleContainerTools/distroless/issues/914
+  # /tmp has permissions 777
+  - TUF_ROOT=/tmp
   - COSIGN_EXPERIMENTAL=true
   - GOOGLE_SERVICE_ACCOUNT_NAME=keyless@${PROJECT_ID}.iam.gserviceaccount.com
   entrypoint: sh
